# formula1_data_engineering

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yaml  docker-compose.yml  plan.md  predict.py  pyproject.toml  requirements.txt
dags/: f1_data_pipeline.py
data/cache/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: DataSchema.md
logs/: .gitkeep
src/extractors/: __init__.py  events_extractor.py  practice_extractor.py  qualifying_extractor.py  race_extractor.py  sprint_extractor.py  standings_extractor.py  weather_extractor.py
src/models/: driver.py  race_prediction.py  session.py  weather.py
src/utils/: storage_io.py
tests/: manual_model_test.py  verify_dag_import.py
